# tui

./: .gitignore  README.md  demo.py  pyproject.toml  speed_test.py  tasks.py
src/: color.py  components.py  events.py  renderer.py
tui/: color.py  events.py  focus_manager.py  viewport.py  window.py
tui/components/: __init__.py  component.py  component_style.py  component_tree.py
tui/components/examples/: __init__.py  button.py  input.py
tui/rendering/: renderer.py
tui/style_resolver/: __init__.py  resolution_utils.py  style_resolver.py  units.py
tui/utils/: logger.py
