[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["0442 <82746@proton.me>"]
readme = "README.md"
exclude = ["*log.txt"]

[tool.poetry.dependencies]
python = "^3.11"
blessed = "^1.20.0"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pylint = "^3.0.3"
autopep8 = "^2.0.4"
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
